Fix slightly overflowing homepage empty graphic

--- a/src/global.scss
+++ b/src/global.scss
@@ -162,7 +162,7 @@ ion-item.search ion-input {
 }
 
 .vertically-center, ion-content > app-loader {
-    height: 100%;
+    height: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
